--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@strapi/plugin-cloud": "5.18.1",
     "@strapi/plugin-color-picker": "^5.18.1",
     "@strapi/plugin-users-permissions": "5.18.1",
+    "@strapi/provider-upload-cloudinary": "^4.25.23",
     "@strapi/strapi": "5.18.1",
     "pg": "8.8.0",
     "react": "^18.0.0",
